Fixes masked address and friendly name alignment in events list and tooltip

--- a/src/modules/core/components/MaskedAddress/MaskedAddress.css
+++ b/src/modules/core/components/MaskedAddress/MaskedAddress.css
@@ -2,7 +2,6 @@
   font-family: var(--family-techie);
   font-size: var(--size-smallish);
   font-weight: 600;
-  line-height: 1;
   color: var(--temp-grey-blue-7);
 }
 
