--- a/src/modules/dashboard/components/ColonyEvents/ColonyEventsListItem.css
+++ b/src/modules/dashboard/components/ColonyEvents/ColonyEventsListItem.css
@@ -110,7 +110,7 @@
 }
 
 .tooltip span {
-  vertical-align: text-top;
+  /* vertical-align: text-bottom; */
   font-size: var(--size-tiny);
 }
 
